# cell

./: .gitignore  Cargo.toml  LOG.md  README.md  TODO  bug.txt  snapcraft.yaml
src/: edit.rs  editor.rs  fil.rs  file.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
src/edit/: editor.rs  row.rs
src/fil/: file.rs
src/term/: terminal.rs
