[package]
name = "cell"
version = "0.1.0"
authors = ["Shaharyar Ahmed <shaharyar.ahmed1121@gmail.com>"]
edition = "2018"
description = "A minimal command line text editor developed using Rust"
homepage = "https://shaharyarahmedbot.pythonanywhere.com/"
repository = "https://github.com/ShaharyarAhmed-bot/cell"
license = "GNU"


[dependencies]
termion = "1"
unicode-segmentation = "1"
